--- a/example_talk.tex
+++ b/example_talk.tex
@@ -10,7 +10,7 @@
 % DOCUMENT PROPERTIES
 
 \author{Patrick Pletscher}
-\title{Zurich Beamer Template}
+\title{Zurich Beamer Theme}
 
 %-----------------------------------------------------------------------------
 
